// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`bindings react codegen snapshot per primitive: react:aspect-ratio 1`] = `
"// AUTO-GENERATED by \`faqir bindings react\` from registry/primitives/aspect-ratio/aspect-ratio.manifest.json.
// Do not edit — regenerate with \`faqir bindings react\`.

import { createFaqirPrimitive } from "../runtime";
import type { ComponentPropsWithoutRef } from "react";

/** Allowed \`variant\` values (manifest variant group "ratio", attr \`data-variant\`). */
export type LAspectRatioVariant = "square" | "16-9" | "4-3" | "3-2" | "21-9" | "portrait";

export interface LAspectRatioProps extends Omit<ComponentPropsWithoutRef<"div">, "variant"> {
  /** \`data-variant\`; omitted when unset (manifest default: "square"). */
  variant?: LAspectRatioVariant;
}

/** \`aspect-ratio\` — CSS wrapper that locks a child (image, video, iframe) to a fixed width-to-height ratio and crops the overflow */
export const LAspectRatio = createFaqirPrimitive<LAspectRatioProps>({
  name: "aspect-ratio",
  tag: "div",
  variants: [
    { prop: "variant", attr: "data-variant", values: ["square", "16-9", "4-3", "3-2", "21-9", "portrait"] },
  ],
  states: [],
  slots: [],
  defaultSlot: true,
}, "LAspectRatio");

export default LAspectRatio;
"
`;

exports[`bindings react codegen snapshot per primitive: react:avatar 1`] = `
"// AUTO-GENERATED by \`faqir bindings react\` from registry/primitives/avatar/avatar.manifest.json.
// Do not edit — regenerate with \`faqir bindings react\`.

import { createFaqirPrimitive } from "../runtime";
import type { ComponentPropsWithoutRef, ReactNode } from "react";

/** Allowed \`size\` values (manifest variant group "size", attr \`data-size\`). */
export type LAvatarSize = "sm" | "md" | "lg";

export interface LAvatarProps extends Omit<ComponentPropsWithoutRef<"span">, "size" | "image" | "fallback"> {
  /** \`data-size\`; omitted when unset (manifest default: "md"). */
  size?: LAvatarSize;
  /** Projected into \`<img data-part="image">\`. */
  image?: ReactNode;
  /** Projected into \`<span data-part="fallback">\` (required part — always rendered). */
  fallback?: ReactNode;
}

/** \`avatar\` — User avatar with image and fallback initials */
export const LAvatar = createFaqirPrimitive<LAvatarProps>({
  name: "avatar",
  tag: "span",
  variants: [
    { prop: "size", attr: "data-size", values: ["sm", "md", "lg"] },
  ],
  states: [],
  slots: [
    { name: "image", tag: "img", required: false, isVoid: true },
    { name: "fallback", tag: "span", required: true, isVoid: false },
  ],
  defaultSlot: false,
}, "LAvatar");

export default LAvatar;
"
`;

exports[`bindings react codegen snapshot per primitive: react:badge 1`] = `
"// AUTO-GENERATED by \`faqir bindings react\` from registry/primitives/badge/badge.manifest.json.
// Do not edit — regenerate with \`faqir bindings react\`.

import { createFaqirPrimitive } from "../runtime";
import type { ComponentPropsWithoutRef } from "react";

/** Allowed \`variant\` values (manifest variant group "visual", attr \`data-variant\`). */
export type LBadgeVariant = "default" | "primary" | "secondary" | "destructive" | "success" | "warning";

/** Allowed \`size\` values (manifest variant group "size", attr \`data-size\`). */
export type LBadgeSize = "sm" | "md" | "lg";

export interface LBadgeProps extends Omit<ComponentPropsWithoutRef<"span">, "variant" | "size"> {
  /** \`data-variant\`; omitted when unset (manifest default: "default"). */
  variant?: LBadgeVariant;
  /** \`data-size\`; omitted when unset (manifest default: "md"). */
  size?: LBadgeSize;
}

/** \`badge\` — Small status indicator with color variants */
export const LBadge = createFaqirPrimitive<LBadgeProps>({
  name: "badge",
  tag: "span",
  variants: [
    { prop: "variant", attr: "data-variant", values: ["default", "primary", "secondary", "destructive", "success", "warning"] },
    { prop: "size", attr: "data-size", values: ["sm", "md", "lg"] },
  ],
  states: [],
  slots: [],
  defaultSlot: true,
}, "LBadge");

export default LBadge;
"
`;

exports[`bindings react codegen snapshot per primitive: react:breadcrumb 1`] = `
"// AUTO-GENERATED by \`faqir bindings react\` from registry/primitives/breadcrumb/breadcrumb.manifest.json.
// Do not edit — regenerate with \`faqir bindings react\`.

import { createFaqirPrimitive } from "../runtime";
import type { ComponentPropsWithoutRef, ReactNode } from "react";

/** Allowed \`size\` values (manifest variant group "size", attr \`data-size\`). */
export type LBreadcrumbSize = "sm" | "md" | "lg";

export interface LBreadcrumbProps extends Omit<ComponentPropsWithoutRef<"nav">, "size" | "list" | "item" | "separator" | "current"> {
  /** \`data-size\`; omitted when unset (manifest default: "md"). */
  size?: LBreadcrumbSize;
  /** Projected into \`<ol data-part="list">\`. */
  list?: ReactNode;
  /** Projected into \`<a data-part="item">\`. */
  item?: ReactNode;
  /** Projected into \`<li data-part="separator">\`. */
  separator?: ReactNode;
  /** Projected into \`<span data-part="current">\` (required part — always rendered). */
  current?: ReactNode;
}

/** \`breadcrumb\` — Breadcrumb trail — a <nav aria-label="Breadcrumb"> with link items, presentational separators, and the current page marked aria-current="page" */
export const LBreadcrumb = createFaqirPrimitive<LBreadcrumbProps>({
  name: "breadcrumb",
  tag: "nav",
  variants: [
    { prop: "size", attr: "data-size", values: ["sm", "md", "lg"] },
  ],
  states: [],
  slots: [
    { name: "list", tag: "ol", required: false, isVoid: false },
    { name: "item", tag: "a", required: false, isVoid: false },
    { name: "separator", tag: "li", required: false, isVoid: false },
    { name: "current", tag: "span", required: true, isVoid: false },
  ],
  defaultSlot: false,
}, "LBreadcrumb");

export default LBreadcrumb;
"
`;

exports[`bindings react codegen snapshot per primitive: react:button 1`] = `
"// AUTO-GENERATED by \`faqir bindings react\` from registry/primitives/button/button.manifest.json.
// Do not edit — regenerate with \`faqir bindings react\`.

import { createFaqirPrimitive } from "../runtime";
import type { ComponentPropsWithoutRef, ReactNode } from "react";

/** Allowed \`variant\` values (manifest variant group "visual", attr \`data-variant\`). */
export type LButtonVariant = "default" | "primary" | "secondary" | "destructive" | "ghost" | "outline" | "link";

/** Allowed \`size\` values (manifest variant group "size", attr \`data-size\`). */
export type LButtonSize = "sm" | "md" | "lg";

export interface LButtonProps extends Omit<ComponentPropsWithoutRef<"button">, "variant" | "size" | "loading" | "disabled" | "icon"> {
  /** \`data-variant\`; omitted when unset (manifest default: "default"). */
  variant?: LButtonVariant;
  /** \`data-size\`; omitted when unset (manifest default: "md"). */
  size?: LButtonSize;
  /** Sets \`data-state="loading"\`. */
  loading?: boolean;
  /** Sets the \`disabled\` attribute. */
  disabled?: boolean;
  /** Projected into \`<span data-part="icon">\`. */
  icon?: ReactNode;
}

/** \`button\` — Interactive button with multiple visual variants and sizes */
export const LButton = createFaqirPrimitive<LButtonProps>({
  name: "button",
  tag: "button",
  variants: [
    { prop: "variant", attr: "data-variant", values: ["default", "primary", "secondary", "destructive", "ghost", "outline", "link"] },
    { prop: "size", attr: "data-size", values: ["sm", "md", "lg"] },
  ],
  states: [
    { prop: "loading", attr: "data-state", value: "loading", kind: "value" },
    { prop: "disabled", attr: "disabled", value: null, kind: "presence" },
  ],
  slots: [
    { name: "icon", tag: "span", required: false, isVoid: false },
  ],
  defaultSlot: true,
}, "LButton");

export default LButton;
"
`;

exports[`bindings react codegen snapshot per primitive: react:callout 1`] = `
"// AUTO-GENERATED by \`faqir bindings react\` from registry/primitives/callout/callout.manifest.json.
// Do not edit — regenerate with \`faqir bindings react\`.

import { createFaqirPrimitive } from "../runtime";
import type { ComponentPropsWithoutRef, ReactNode } from "react";

/** Allowed \`variant\` values (manifest variant group "variant", attr \`data-variant\`). */
export type LCalloutVariant = "info" | "warning" | "destructive" | "success" | "muted";

export interface LCalloutProps extends Omit<ComponentPropsWithoutRef<"div">, "variant" | "icon" | "content" | "title" | "dismiss"> {
  /** \`data-variant\`; omitted when unset (manifest default: "info"). */
  variant?: LCalloutVariant;
  /** Projected into \`<span data-part="icon">\`. */
  icon?: ReactNode;
  /** Projected into \`<div data-part="content">\` (required part — always rendered). */
  content?: ReactNode;
  /** Projected into \`<strong data-part="title">\`. */
  title?: ReactNode;
  /** Projected into \`<button data-part="dismiss">\`. */
  dismiss?: ReactNode;
}

/** \`callout\` — Callout box for info notices, warnings, alerts, legal text, and disclaimers */
export const LCallout = createFaqirPrimitive<LCalloutProps>({
  name: "callout",
  tag: "div",
  variants: [
    { prop: "variant", attr: "data-variant", values: ["info", "warning", "destructive", "success", "muted"] },
  ],
  states: [],
  slots: [
    { name: "icon", tag: "span", required: false, isVoid: false },
    { name: "content", tag: "div", required: true, isVoid: false },
    { name: "title", tag: "strong", required: false, isVoid: false },
    { name: "dismiss", tag: "button", required: false, isVoid: false },
  ],
  defaultSlot: false,
}, "LCallout");

export default LCallout;
"
`;

exports[`bindings react codegen snapshot per primitive: react:card 1`] = `
"// AUTO-GENERATED by \`faqir bindings react\` from registry/primitives/card/card.manifest.json.
// Do not edit — regenerate with \`faqir bindings react\`.

import { createFaqirPrimitive } from "../runtime";
import type { ComponentPropsWithoutRef, ReactNode } from "react";

/** Allowed \`variant\` values (manifest variant group "visual", attr \`data-variant\`). */
export type LCardVariant = "default" | "outlined" | "filled";

/** Allowed \`size\` values (manifest variant group "size", attr \`data-size\`). */
export type LCardSize = "sm" | "md" | "lg";

export interface LCardProps extends Omit<ComponentPropsWithoutRef<"div">, "variant" | "size" | "header" | "title" | "description" | "body" | "footer"> {
  /** \`data-variant\`; omitted when unset (manifest default: "default"). */
  variant?: LCardVariant;
  /** \`data-size\`; omitted when unset (manifest default: "md"). */
  size?: LCardSize;
  /** Projected into \`<div data-part="header">\`. */
  header?: ReactNode;
  /** Projected into \`<h3 data-part="title">\`. */
  title?: ReactNode;
  /** Projected into \`<p data-part="description">\`. */
  description?: ReactNode;
  /** Projected into \`<div data-part="body">\` (required part — always rendered). */
  body?: ReactNode;
  /** Projected into \`<div data-part="footer">\`. */
  footer?: ReactNode;
}

/** \`card\` — Container surface with header, body, and footer slots */
export const LCard = createFaqirPrimitive<LCardProps>({
  name: "card",
  tag: "div",
  variants: [
    { prop: "variant", attr: "data-variant", values: ["default", "outlined", "filled"] },
    { prop: "size", attr: "data-size", values: ["sm", "md", "lg"] },
  ],
  states: [],
  slots: [
    { name: "header", tag: "div", required: false, isVoid: false },
    { name: "title", tag: "h3", required: false, isVoid: false },
    { name: "description", tag: "p", required: false, isVoid: false },
    { name: "body", tag: "div", required: true, isVoid: false },
    { name: "footer", tag: "div", required: false, isVoid: false },
  ],
  defaultSlot: false,
}, "LCard");

export default LCard;
"
`;

exports[`bindings react codegen snapshot per primitive: react:checkbox 1`] = `
"// AUTO-GENERATED by \`faqir bindings react\` from registry/primitives/checkbox/checkbox.manifest.json.
// Do not edit — regenerate with \`faqir bindings react\`.

import { createFaqirPrimitive } from "../runtime";
import type { ComponentPropsWithoutRef } from "react";

/** Allowed \`size\` values (manifest variant group "size", attr \`data-size\`). */
export type LCheckboxSize = "sm" | "md" | "lg";

export interface LCheckboxProps extends Omit<ComponentPropsWithoutRef<"input">, "size" | "checked" | "indeterminate" | "disabled"> {
  /** \`data-size\`; omitted when unset (manifest default: "md"). */
  size?: LCheckboxSize;
  /** Sets the \`checked\` attribute. */
  checked?: boolean;
  /** Sets \`data-state="indeterminate"\`. */
  indeterminate?: boolean;
  /** Sets the \`disabled\` attribute. */
  disabled?: boolean;
}

/** \`checkbox\` — Custom styled checkbox with checked, indeterminate, disabled states and size variants */
export const LCheckbox = createFaqirPrimitive<LCheckboxProps>({
  name: "checkbox",
  tag: "input",
  variants: [
    { prop: "size", attr: "data-size", values: ["sm", "md", "lg"] },
  ],
  states: [
    { prop: "checked", attr: "checked", value: null, kind: "presence" },
    { prop: "indeterminate", attr: "data-state", value: "indeterminate", kind: "value" },
    { prop: "disabled", attr: "disabled", value: null, kind: "presence" },
  ],
  slots: [],
  defaultSlot: false,
}, "LCheckbox");

export default LCheckbox;
"
`;

exports[`bindings react codegen snapshot per primitive: react:chip 1`] = `
"// AUTO-GENERATED by \`faqir bindings react\` from registry/primitives/chip/chip.manifest.json.
// Do not edit — regenerate with \`faqir bindings react\`.

import { createFaqirPrimitive } from "../runtime";
import type { ComponentPropsWithoutRef, ReactNode } from "react";

/** Allowed \`variant\` values (manifest variant group "visual", attr \`data-variant\`). */
export type LChipVariant = "default" | "primary" | "outline" | "destructive";

/** Allowed \`size\` values (manifest variant group "size", attr \`data-size\`). */
export type LChipSize = "sm" | "md" | "lg";

export interface LChipProps extends Omit<ComponentPropsWithoutRef<"span">, "variant" | "size" | "label" | "dismiss"> {
  /** \`data-variant\`; omitted when unset (manifest default: "default"). */
  variant?: LChipVariant;
  /** \`data-size\`; omitted when unset (manifest default: "md"). */
  size?: LChipSize;
  /** Projected into \`<span data-part="label">\` (required part — always rendered). */
  label?: ReactNode;
  /** Projected into \`<button data-part="dismiss">\`. */
  dismiss?: ReactNode;
}

/** \`chip\` — Tag/chip with a label and an optional dismiss button */
export const LChip = createFaqirPrimitive<LChipProps>({
  name: "chip",
  tag: "span",
  variants: [
    { prop: "variant", attr: "data-variant", values: ["default", "primary", "outline", "destructive"] },
    { prop: "size", attr: "data-size", values: ["sm", "md", "lg"] },
  ],
  states: [],
  slots: [
    { name: "label", tag: "span", required: true, isVoid: false },
    { name: "dismiss", tag: "button", required: false, isVoid: false },
  ],
  defaultSlot: false,
}, "LChip");

export default LChip;
"
`;

exports[`bindings react codegen snapshot per primitive: react:collapsible 1`] = `
"// AUTO-GENERATED by \`faqir bindings react\` from registry/primitives/collapsible/collapsible.manifest.json.
// Do not edit — regenerate with \`faqir bindings react\`.

import { createFaqirPrimitive } from "../runtime";
import type { ComponentPropsWithoutRef, ReactNode } from "react";

/** Allowed \`variant\` values (manifest variant group "visual", attr \`data-variant\`). */
export type LCollapsibleVariant = "default" | "bordered";

export interface LCollapsibleProps extends Omit<ComponentPropsWithoutRef<"details">, "variant" | "open" | "trigger" | "content"> {
  /** \`data-variant\`; omitted when unset (manifest default: "default"). */
  variant?: LCollapsibleVariant;
  /** Sets the \`open\` attribute. */
  open?: boolean;
  /** Projected into \`<summary data-part="trigger">\` (required part — always rendered). */
  trigger?: ReactNode;
  /** Projected into \`<div data-part="content">\` (required part — always rendered). */
  content?: ReactNode;
}

/** \`collapsible\` — Disclosure widget built on native <details>/<summary> — opens and closes with zero JavaScript, animated via ::details-content where supported */
export const LCollapsible = createFaqirPrimitive<LCollapsibleProps>({
  name: "collapsible",
  tag: "details",
  variants: [
    { prop: "variant", attr: "data-variant", values: ["default", "bordered"] },
  ],
  states: [
    { prop: "open", attr: "open", value: null, kind: "presence" },
  ],
  slots: [
    { name: "trigger", tag: "summary", required: true, isVoid: false },
    { name: "content", tag: "div", required: true, isVoid: false },
  ],
  defaultSlot: false,
}, "LCollapsible");

export default LCollapsible;
"
`;

exports[`bindings react codegen snapshot per primitive: react:description-list 1`] = `
"// AUTO-GENERATED by \`faqir bindings react\` from registry/primitives/description-list/description-list.manifest.json.
// Do not edit — regenerate with \`faqir bindings react\`.

import { createFaqirPrimitive } from "../runtime";
import type { ComponentPropsWithoutRef, ReactNode } from "react";

/** Allowed \`variant\` values (manifest variant group "variant", attr \`data-variant\`). */
export type LDescriptionListVariant = "vertical" | "horizontal";

/** Allowed \`size\` values (manifest variant group "size", attr \`data-size\`). */
export type LDescriptionListSize = "sm" | "md" | "lg";

export interface LDescriptionListProps extends Omit<ComponentPropsWithoutRef<"dl">, "variant" | "size" | "term" | "details"> {
  /** \`data-variant\`; omitted when unset (manifest default: "vertical"). */
  variant?: LDescriptionListVariant;
  /** \`data-size\`; omitted when unset (manifest default: "md"). */
  size?: LDescriptionListSize;
  /** Projected into \`<dt data-part="term">\` (required part — always rendered). */
  term?: ReactNode;
  /** Projected into \`<dd data-part="details">\` (required part — always rendered). */
  details?: ReactNode;
}

/** \`description-list\` — Styled description list (dl/dt/dd) for longer descriptive key-value content */
export const LDescriptionList = createFaqirPrimitive<LDescriptionListProps>({
  name: "description-list",
  tag: "dl",
  variants: [
    { prop: "variant", attr: "data-variant", values: ["vertical", "horizontal"] },
    { prop: "size", attr: "data-size", values: ["sm", "md", "lg"] },
  ],
  states: [],
  slots: [
    { name: "term", tag: "dt", required: true, isVoid: false },
    { name: "details", tag: "dd", required: true, isVoid: false },
  ],
  defaultSlot: false,
}, "LDescriptionList");

export default LDescriptionList;
"
`;

exports[`bindings react codegen snapshot per primitive: react:empty-state 1`] = `
"// AUTO-GENERATED by \`faqir bindings react\` from registry/primitives/empty-state/empty-state.manifest.json.
// Do not edit — regenerate with \`faqir bindings react\`.

import { createFaqirPrimitive } from "../runtime";
import type { ComponentPropsWithoutRef, ReactNode } from "react";

export interface LEmptyStateProps extends Omit<ComponentPropsWithoutRef<"div">, "icon" | "title" | "description" | "actions"> {
  /** Projected into \`<span data-part="icon">\`. */
  icon?: ReactNode;
  /** Projected into \`<h3 data-part="title">\` (required part — always rendered). */
  title?: ReactNode;
  /** Projected into \`<p data-part="description">\`. */
  description?: ReactNode;
  /** Projected into \`<div data-part="actions">\`. */
  actions?: ReactNode;
}

/** \`empty-state\` — Placeholder for empty content sections with icon, title, description, and action slots */
export const LEmptyState = createFaqirPrimitive<LEmptyStateProps>({
  name: "empty-state",
  tag: "div",
  variants: [],
  states: [],
  slots: [
    { name: "icon", tag: "span", required: false, isVoid: false },
    { name: "title", tag: "h3", required: true, isVoid: false },
    { name: "description", tag: "p", required: false, isVoid: false },
    { name: "actions", tag: "div", required: false, isVoid: false },
  ],
  defaultSlot: false,
}, "LEmptyState");

export default LEmptyState;
"
`;

exports[`bindings react codegen snapshot per primitive: react:field-group 1`] = `
"// AUTO-GENERATED by \`faqir bindings react\` from registry/primitives/field-group/field-group.manifest.json.
// Do not edit — regenerate with \`faqir bindings react\`.

import { createFaqirPrimitive } from "../runtime";
import type { ComponentPropsWithoutRef, ReactNode } from "react";

/** Allowed \`variant\` values (manifest variant group "layout", attr \`data-variant\`). */
export type LFieldGroupVariant = "vertical" | "horizontal";

/** Allowed \`size\` values (manifest variant group "size", attr \`data-size\`). */
export type LFieldGroupSize = "sm" | "md" | "lg";

export interface LFieldGroupProps extends Omit<ComponentPropsWithoutRef<"div">, "variant" | "size" | "invalid" | "validating" | "valid" | "disabled" | "label" | "required" | "input" | "description" | "error"> {
  /** \`data-variant\`; omitted when unset (manifest default: "vertical"). */
  variant?: LFieldGroupVariant;
  /** \`data-size\`; omitted when unset (manifest default: "md"). */
  size?: LFieldGroupSize;
  /** Sets \`data-state="invalid"\`. */
  invalid?: boolean;
  /** Sets \`data-state="validating"\`. */
  validating?: boolean;
  /** Sets \`data-state="valid"\`. */
  valid?: boolean;
  /** Sets \`data-state="disabled"\`. */
  disabled?: boolean;
  /** Projected into \`<label data-part="label">\` (required part — always rendered). */
  label?: ReactNode;
  /** Projected into \`<span data-part="required">\`. */
  required?: ReactNode;
  /** Projected into \`<div data-part="input">\` (required part — always rendered). */
  input?: ReactNode;
  /** Projected into \`<p data-part="description">\`. */
  description?: ReactNode;
  /** Projected into \`<p data-part="error">\`. */
  error?: ReactNode;
}

/** \`field-group\` — Form field wrapper combining label, input slot, description, and error message, with a normalized validation contract (§7.1): states invalid | validating | disabled, a standardized required marker, and CSS-driven error visibility (no JS class toggling) */
export const LFieldGroup = createFaqirPrimitive<LFieldGroupProps>({
  name: "field-group",
  tag: "div",
  variants: [
    { prop: "variant", attr: "data-variant", values: ["vertical", "horizontal"] },
    { prop: "size", attr: "data-size", values: ["sm", "md", "lg"] },
  ],
  states: [
    { prop: "invalid", attr: "data-state", value: "invalid", kind: "value" },
    { prop: "validating", attr: "data-state", value: "validating", kind: "value" },
    { prop: "valid", attr: "data-state", value: "valid", kind: "value" },
    { prop: "disabled", attr: "data-state", value: "disabled", kind: "value" },
  ],
  slots: [
    { name: "label", tag: "label", required: true, isVoid: false },
    { name: "required", tag: "span", required: false, isVoid: false },
    { name: "input", tag: "div", required: true, isVoid: false },
    { name: "description", tag: "p", required: false, isVoid: false },
    { name: "error", tag: "p", required: false, isVoid: false },
  ],
  defaultSlot: false,
}, "LFieldGroup");

export default LFieldGroup;
"
`;

exports[`bindings react codegen snapshot per primitive: react:grid 1`] = `
"// AUTO-GENERATED by \`faqir bindings react\` from registry/primitives/grid/grid.manifest.json.
// Do not edit — regenerate with \`faqir bindings react\`.

import { createFaqirPrimitive } from "../runtime";
import type { ComponentPropsWithoutRef } from "react";

/** Allowed \`cols\` values (manifest variant group "cols", attr \`data-cols\`). */
export type LGridCols = "1" | "2" | "3" | "4" | "6" | "12";

/** Allowed \`gap\` values (manifest variant group "gap", attr \`data-gap\`). */
export type LGridGap = "2" | "4" | "6" | "8";

export interface LGridProps extends Omit<ComponentPropsWithoutRef<"div">, "cols" | "gap"> {
  /** \`data-cols\`; omitted when unset (manifest default: "1"). */
  cols?: LGridCols;
  /** \`data-gap\`; omitted when unset (manifest default: "4"). */
  gap?: LGridGap;
}

/** \`grid\` — CSS Grid container with configurable columns and gap */
export const LGrid = createFaqirPrimitive<LGridProps>({
  name: "grid",
  tag: "div",
  variants: [
    { prop: "cols", attr: "data-cols", values: ["1", "2", "3", "4", "6", "12"] },
    { prop: "gap", attr: "data-gap", values: ["2", "4", "6", "8"] },
  ],
  states: [],
  slots: [],
  defaultSlot: true,
}, "LGrid");

export default LGrid;
"
`;

exports[`bindings react codegen snapshot per primitive: react:icon 1`] = `
"// AUTO-GENERATED by \`faqir bindings react\` from registry/primitives/icon/icon.manifest.json.
// Do not edit — regenerate with \`faqir bindings react\`.

import { createFaqirPrimitive } from "../runtime";
import type { ComponentPropsWithoutRef } from "react";

/** Allowed \`icon\` values (manifest variant group "icon", attr \`data-icon\`). */
export type LIconIcon = "activity" | "arrow-down" | "arrow-left" | "arrow-right" | "arrow-up" | "award" | "bell" | "bold" | "book" | "bug" | "calendar" | "camera" | "chart-column" | "chart-line" | "chart-pie" | "check" | "check-check" | "chevron-down" | "chevron-left" | "chevron-right" | "chevron-up" | "circle" | "circle-alert" | "circle-check" | "circle-question-mark" | "circle-user" | "circle-x" | "clipboard" | "clock" | "cloud" | "code" | "compass" | "copy" | "cpu" | "credit-card" | "database" | "dollar-sign" | "download" | "ellipsis" | "external-link" | "eye" | "eye-off" | "file" | "file-text" | "folder" | "folder-open" | "funnel" | "git-branch" | "globe" | "hash" | "heart" | "house" | "image" | "info" | "italic" | "key" | "layers" | "link" | "list" | "loader-circle" | "lock" | "lock-open" | "log-in" | "log-out" | "mail" | "map" | "map-pin" | "maximize" | "menu" | "message-circle" | "message-square" | "mic" | "minus" | "moon" | "move" | "music" | "package" | "paperclip" | "pause" | "pencil" | "phone" | "play" | "plus" | "printer" | "refresh-cw" | "save" | "search" | "send" | "server" | "settings" | "share-2" | "shield" | "shield-check" | "shopping-cart" | "skip-forward" | "sliders-horizontal" | "sparkles" | "star" | "sun" | "tag" | "target" | "terminal" | "text-align-start" | "thumbs-up" | "timer" | "trash-2" | "trending-up" | "triangle-alert" | "type" | "underline" | "upload" | "user" | "user-plus" | "users" | "video" | "volume-2" | "wallet" | "wifi" | "x" | "zap";

export interface LIconProps extends Omit<ComponentPropsWithoutRef<"span">, "icon"> {
  /** \`data-icon\`; omitted when unset (manifest default: "circle"). */
  icon?: LIconIcon;
}

/** \`icon\` — CSS-only icon: a data-URI SVG rendered via mask-image on a currentColor box. Inherits text color and sizes with font-size (1em). data-icon selects the glyph from a curated Lucide (ISC) subset. Zero JavaScript, zero web requests. */
export const LIcon = createFaqirPrimitive<LIconProps>({
  name: "icon",
  tag: "span",
  variants: [
    { prop: "icon", attr: "data-icon", values: ["activity", "arrow-down", "arrow-left", "arrow-right", "arrow-up", "award", "bell", "bold", "book", "bug", "calendar", "camera", "chart-column", "chart-line", "chart-pie", "check", "check-check", "chevron-down", "chevron-left", "chevron-right", "chevron-up", "circle", "circle-alert", "circle-check", "circle-question-mark", "circle-user", "circle-x", "clipboard", "clock", "cloud", "code", "compass", "copy", "cpu", "credit-card", "database", "dollar-sign", "download", "ellipsis", "external-link", "eye", "eye-off", "file", "file-text", "folder", "folder-open", "funnel", "git-branch", "globe", "hash", "heart", "house", "image", "info", "italic", "key", "layers", "link", "list", "loader-circle", "lock", "lock-open", "log-in", "log-out", "mail", "map", "map-pin", "maximize", "menu", "message-circle", "message-square", "mic", "minus", "moon", "move", "music", "package", "paperclip", "pause", "pencil", "phone", "play", "plus", "printer", "refresh-cw", "save", "search", "send", "server", "settings", "share-2", "shield", "shield-check", "shopping-cart", "skip-forward", "sliders-horizontal", "sparkles", "star", "sun", "tag", "target", "terminal", "text-align-start", "thumbs-up", "timer", "trash-2", "trending-up", "triangle-alert", "type", "underline", "upload", "user", "user-plus", "users", "video", "volume-2", "wallet", "wifi", "x", "zap"] },
  ],
  states: [],
  slots: [],
  defaultSlot: true,
}, "LIcon");

export default LIcon;
"
`;

exports[`bindings react codegen snapshot per primitive: react:image 1`] = `
"// AUTO-GENERATED by \`faqir bindings react\` from registry/primitives/image/image.manifest.json.
// Do not edit — regenerate with \`faqir bindings react\`.

import { createFaqirPrimitive } from "../runtime";
import type { ComponentPropsWithoutRef, ReactNode } from "react";

/** Allowed \`variant\` values (manifest variant group "variant", attr \`data-variant\`). */
export type LImageVariant = "responsive" | "thumbnail" | "cover" | "contain";

/** Allowed \`size\` values (manifest variant group "size", attr \`data-size\`). */
export type LImageSize = "xs" | "sm" | "md" | "lg" | "full";

export interface LImageProps extends Omit<ComponentPropsWithoutRef<"figure">, "variant" | "size" | "img" | "caption"> {
  /** \`data-variant\`; omitted when unset (manifest default: "responsive"). */
  variant?: LImageVariant;
  /** \`data-size\`; omitted when unset (manifest default: "md"). */
  size?: LImageSize;
  /** Projected into \`<img data-part="img">\` (required part — always rendered). */
  img?: ReactNode;
  /** Projected into \`<figcaption data-part="caption">\`. */
  caption?: ReactNode;
}

/** \`image\` — Responsive image with variants for different display modes and print optimization */
export const LImage = createFaqirPrimitive<LImageProps>({
  name: "image",
  tag: "figure",
  variants: [
    { prop: "variant", attr: "data-variant", values: ["responsive", "thumbnail", "cover", "contain"] },
    { prop: "size", attr: "data-size", values: ["xs", "sm", "md", "lg", "full"] },
  ],
  states: [],
  slots: [
    { name: "img", tag: "img", required: true, isVoid: true },
    { name: "caption", tag: "figcaption", required: false, isVoid: false },
  ],
  defaultSlot: false,
}, "LImage");

export default LImage;
"
`;

exports[`bindings react codegen snapshot per primitive: react:input 1`] = `
"// AUTO-GENERATED by \`faqir bindings react\` from registry/primitives/input/input.manifest.json.
// Do not edit — regenerate with \`faqir bindings react\`.

import { createFaqirPrimitive } from "../runtime";
import type { ComponentPropsWithoutRef } from "react";

/** Allowed \`size\` values (manifest variant group "size", attr \`data-size\`). */
export type LInputSize = "sm" | "md" | "lg";

export interface LInputProps extends Omit<ComponentPropsWithoutRef<"input">, "size" | "error" | "disabled"> {
  /** \`data-size\`; omitted when unset (manifest default: "md"). */
  size?: LInputSize;
  /** Sets \`data-state="error"\`. */
  error?: boolean;
  /** Sets the \`disabled\` attribute. */
  disabled?: boolean;
}

/** \`input\` — Text input with error, disabled states and size variants */
export const LInput = createFaqirPrimitive<LInputProps>({
  name: "input",
  tag: "input",
  variants: [
    { prop: "size", attr: "data-size", values: ["sm", "md", "lg"] },
  ],
  states: [
    { prop: "error", attr: "data-state", value: "error", kind: "value" },
    { prop: "disabled", attr: "disabled", value: null, kind: "presence" },
  ],
  slots: [],
  defaultSlot: false,
}, "LInput");

export default LInput;
"
`;

exports[`bindings react codegen snapshot per primitive: react:kbd 1`] = `
"// AUTO-GENERATED by \`faqir bindings react\` from registry/primitives/kbd/kbd.manifest.json.
// Do not edit — regenerate with \`faqir bindings react\`.

import { createFaqirPrimitive } from "../runtime";
import type { ComponentPropsWithoutRef } from "react";

export interface LKbdProps extends ComponentPropsWithoutRef<"kbd"> {
}

/** \`kbd\` — Inline keyboard shortcut key indicator */
export const LKbd = createFaqirPrimitive<LKbdProps>({
  name: "kbd",
  tag: "kbd",
  variants: [],
  states: [],
  slots: [],
  defaultSlot: true,
}, "LKbd");

export default LKbd;
"
`;

exports[`bindings react codegen snapshot per primitive: react:key-value 1`] = `
"// AUTO-GENERATED by \`faqir bindings react\` from registry/primitives/key-value/key-value.manifest.json.
// Do not edit — regenerate with \`faqir bindings react\`.

import { createFaqirPrimitive } from "../runtime";
import type { ComponentPropsWithoutRef, ReactNode } from "react";

/** Allowed \`variant\` values (manifest variant group "variant", attr \`data-variant\`). */
export type LKeyValueVariant = "horizontal" | "vertical" | "inline";

/** Allowed \`size\` values (manifest variant group "size", attr \`data-size\`). */
export type LKeyValueSize = "sm" | "md" | "lg";

export interface LKeyValueProps extends Omit<ComponentPropsWithoutRef<"div">, "variant" | "size" | "label" | "value"> {
  /** \`data-variant\`; omitted when unset (manifest default: "horizontal"). */
  variant?: LKeyValueVariant;
  /** \`data-size\`; omitted when unset (manifest default: "md"). */
  size?: LKeyValueSize;
  /** Projected into \`<dt data-part="label">\` (required part — always rendered). */
  label?: ReactNode;
  /** Projected into \`<dd data-part="value">\` (required part — always rendered). */
  value?: ReactNode;
}

/** \`key-value\` — Labeled data pair for displaying key-value information */
export const LKeyValue = createFaqirPrimitive<LKeyValueProps>({
  name: "key-value",
  tag: "div",
  variants: [
    { prop: "variant", attr: "data-variant", values: ["horizontal", "vertical", "inline"] },
    { prop: "size", attr: "data-size", values: ["sm", "md", "lg"] },
  ],
  states: [],
  slots: [
    { name: "label", tag: "dt", required: true, isVoid: false },
    { name: "value", tag: "dd", required: true, isVoid: false },
  ],
  defaultSlot: false,
}, "LKeyValue");

export default LKeyValue;
"
`;

exports[`bindings react codegen snapshot per primitive: react:label 1`] = `
"// AUTO-GENERATED by \`faqir bindings react\` from registry/primitives/label/label.manifest.json.
// Do not edit — regenerate with \`faqir bindings react\`.

import { createFaqirPrimitive } from "../runtime";
import type { ComponentPropsWithoutRef, ReactNode } from "react";

/** Allowed \`variant\` values (manifest variant group "visual", attr \`data-variant\`). */
export type LLabelVariant = "default" | "required";

/** Allowed \`size\` values (manifest variant group "size", attr \`data-size\`). */
export type LLabelSize = "sm" | "md" | "lg";

export interface LLabelProps extends Omit<ComponentPropsWithoutRef<"label">, "variant" | "size" | "disabled" | "indicator"> {
  /** \`data-variant\`; omitted when unset (manifest default: "default"). */
  variant?: LLabelVariant;
  /** \`data-size\`; omitted when unset (manifest default: "md"). */
  size?: LLabelSize;
  /** Sets \`data-state="disabled"\`. */
  disabled?: boolean;
  /** Projected into \`<span data-part="indicator">\`. */
  indicator?: ReactNode;
}

/** \`label\` — Form label with optional required/optional indicator */
export const LLabel = createFaqirPrimitive<LLabelProps>({
  name: "label",
  tag: "label",
  variants: [
    { prop: "variant", attr: "data-variant", values: ["default", "required"] },
    { prop: "size", attr: "data-size", values: ["sm", "md", "lg"] },
  ],
  states: [
    { prop: "disabled", attr: "data-state", value: "disabled", kind: "value" },
  ],
  slots: [
    { name: "indicator", tag: "span", required: false, isVoid: false },
  ],
  defaultSlot: true,
}, "LLabel");

export default LLabel;
"
`;

exports[`bindings react codegen snapshot per primitive: react:link 1`] = `
"// AUTO-GENERATED by \`faqir bindings react\` from registry/primitives/link/link.manifest.json.
// Do not edit — regenerate with \`faqir bindings react\`.

import { createFaqirPrimitive } from "../runtime";
import type { ComponentPropsWithoutRef } from "react";

/** Allowed \`variant\` values (manifest variant group "style", attr \`data-variant\`). */
export type LLinkVariant = "default" | "external" | "muted";

export interface LLinkProps extends Omit<ComponentPropsWithoutRef<"a">, "variant"> {
  /** \`data-variant\`; omitted when unset (manifest default: "default"). */
  variant?: LLinkVariant;
}

/** \`link\` — Styled anchor with external/muted variants; external links get a CSS-only indicator */
export const LLink = createFaqirPrimitive<LLinkProps>({
  name: "link",
  tag: "a",
  variants: [
    { prop: "variant", attr: "data-variant", values: ["default", "external", "muted"] },
  ],
  states: [],
  slots: [],
  defaultSlot: true,
}, "LLink");

export default LLink;
"
`;

exports[`bindings react codegen snapshot per primitive: react:nav 1`] = `
"// AUTO-GENERATED by \`faqir bindings react\` from registry/primitives/nav/nav.manifest.json.
// Do not edit — regenerate with \`faqir bindings react\`.

import { createFaqirPrimitive } from "../runtime";
import type { ComponentPropsWithoutRef, ReactNode } from "react";

/** Allowed \`variant\` values (manifest variant group "variant", attr \`data-variant\`). */
export type LNavVariant = "horizontal" | "vertical" | "underline" | "pill";

export interface LNavProps extends Omit<ComponentPropsWithoutRef<"nav">, "variant" | "link" | "separator"> {
  /** \`data-variant\`; omitted when unset (manifest default: "horizontal"). */
  variant?: LNavVariant;
  /** Projected into \`<a data-part="link">\` (required part — always rendered). */
  link?: ReactNode;
  /** Projected into \`<div data-part="separator">\`. */
  separator?: ReactNode;
}

/** \`nav\` — Navigation bar with link slots, active state, and horizontal/vertical/underline/pill variants */
export const LNav = createFaqirPrimitive<LNavProps>({
  name: "nav",
  tag: "nav",
  variants: [
    { prop: "variant", attr: "data-variant", values: ["horizontal", "vertical", "underline", "pill"] },
  ],
  states: [],
  slots: [
    { name: "link", tag: "a", required: true, isVoid: false },
    { name: "separator", tag: "div", required: false, isVoid: false },
  ],
  defaultSlot: false,
}, "LNav");

export default LNav;
"
`;

exports[`bindings react codegen snapshot per primitive: react:page-break 1`] = `
"// AUTO-GENERATED by \`faqir bindings react\` from registry/primitives/page-break/page-break.manifest.json.
// Do not edit — regenerate with \`faqir bindings react\`.

import { createFaqirPrimitive } from "../runtime";
import type { ComponentPropsWithoutRef } from "react";

/** Allowed \`variant\` values (manifest variant group "variant", attr \`data-variant\`). */
export type LPageBreakVariant = "after" | "before";

export interface LPageBreakProps extends Omit<ComponentPropsWithoutRef<"div">, "variant"> {
  /** \`data-variant\`; omitted when unset (manifest default: "after"). */
  variant?: LPageBreakVariant;
}

/** \`page-break\` — Print page break with visual indicator for screen editing */
export const LPageBreak = createFaqirPrimitive<LPageBreakProps>({
  name: "page-break",
  tag: "div",
  variants: [
    { prop: "variant", attr: "data-variant", values: ["after", "before"] },
  ],
  states: [],
  slots: [],
  defaultSlot: false,
}, "LPageBreak");

export default LPageBreak;
"
`;

exports[`bindings react codegen snapshot per primitive: react:progress 1`] = `
"// AUTO-GENERATED by \`faqir bindings react\` from registry/primitives/progress/progress.manifest.json.
// Do not edit — regenerate with \`faqir bindings react\`.

import { createFaqirPrimitive } from "../runtime";
import type { ComponentPropsWithoutRef, ReactNode } from "react";

/** Allowed \`variant\` values (manifest variant group "variant", attr \`data-variant\`). */
export type LProgressVariant = "default" | "success" | "warning" | "destructive";

/** Allowed \`size\` values (manifest variant group "size", attr \`data-size\`). */
export type LProgressSize = "sm" | "md" | "lg";

export interface LProgressProps extends Omit<ComponentPropsWithoutRef<"div">, "variant" | "size" | "track" | "fill" | "label"> {
  /** \`data-variant\`; omitted when unset (manifest default: "default"). */
  variant?: LProgressVariant;
  /** \`data-size\`; omitted when unset (manifest default: "md"). */
  size?: LProgressSize;
  /** Projected into \`<div data-part="track">\` (required part — always rendered). */
  track?: ReactNode;
  /** Projected into \`<div data-part="fill">\` (required part — always rendered). */
  fill?: ReactNode;
  /** Projected into \`<span data-part="label">\`. */
  label?: ReactNode;
}

/** \`progress\` — Progress bar with animated fill, color variants, and optional label */
export const LProgress = createFaqirPrimitive<LProgressProps>({
  name: "progress",
  tag: "div",
  variants: [
    { prop: "variant", attr: "data-variant", values: ["default", "success", "warning", "destructive"] },
    { prop: "size", attr: "data-size", values: ["sm", "md", "lg"] },
  ],
  states: [],
  slots: [
    { name: "track", tag: "div", required: true, isVoid: false },
    { name: "fill", tag: "div", required: true, isVoid: false },
    { name: "label", tag: "span", required: false, isVoid: false },
  ],
  defaultSlot: false,
}, "LProgress");

export default LProgress;
"
`;

exports[`bindings react codegen snapshot per primitive: react:radio 1`] = `
"// AUTO-GENERATED by \`faqir bindings react\` from registry/primitives/radio/radio.manifest.json.
// Do not edit — regenerate with \`faqir bindings react\`.

import { createFaqirPrimitive } from "../runtime";
import type { ComponentPropsWithoutRef } from "react";

/** Allowed \`size\` values (manifest variant group "size", attr \`data-size\`). */
export type LRadioSize = "sm" | "md" | "lg";

export interface LRadioProps extends Omit<ComponentPropsWithoutRef<"input">, "size" | "checked" | "disabled"> {
  /** \`data-size\`; omitted when unset (manifest default: "md"). */
  size?: LRadioSize;
  /** Sets the \`checked\` attribute. */
  checked?: boolean;
  /** Sets the \`disabled\` attribute. */
  disabled?: boolean;
}

/** \`radio\` — Custom styled radio button for single selection within a group, with size variants */
export const LRadio = createFaqirPrimitive<LRadioProps>({
  name: "radio",
  tag: "input",
  variants: [
    { prop: "size", attr: "data-size", values: ["sm", "md", "lg"] },
  ],
  states: [
    { prop: "checked", attr: "checked", value: null, kind: "presence" },
    { prop: "disabled", attr: "disabled", value: null, kind: "presence" },
  ],
  slots: [],
  defaultSlot: false,
}, "LRadio");

export default LRadio;
"
`;

exports[`bindings react codegen snapshot per primitive: react:select 1`] = `
"// AUTO-GENERATED by \`faqir bindings react\` from registry/primitives/select/select.manifest.json.
// Do not edit — regenerate with \`faqir bindings react\`.

import { createFaqirPrimitive } from "../runtime";
import type { ComponentPropsWithoutRef } from "react";

/** Allowed \`size\` values (manifest variant group "size", attr \`data-size\`). */
export type LSelectSize = "sm" | "md" | "lg";

export interface LSelectProps extends Omit<ComponentPropsWithoutRef<"select">, "size" | "error" | "disabled"> {
  /** \`data-size\`; omitted when unset (manifest default: "md"). */
  size?: LSelectSize;
  /** Sets \`data-state="error"\`. */
  error?: boolean;
  /** Sets the \`disabled\` attribute. */
  disabled?: boolean;
}

/** \`select\` — Native select dropdown with custom arrow, error and disabled states, and size variants */
export const LSelect = createFaqirPrimitive<LSelectProps>({
  name: "select",
  tag: "select",
  variants: [
    { prop: "size", attr: "data-size", values: ["sm", "md", "lg"] },
  ],
  states: [
    { prop: "error", attr: "data-state", value: "error", kind: "value" },
    { prop: "disabled", attr: "disabled", value: null, kind: "presence" },
  ],
  slots: [],
  defaultSlot: true,
}, "LSelect");

export default LSelect;
"
`;

exports[`bindings react codegen snapshot per primitive: react:separator 1`] = `
"// AUTO-GENERATED by \`faqir bindings react\` from registry/primitives/separator/separator.manifest.json.
// Do not edit — regenerate with \`faqir bindings react\`.

import { createFaqirPrimitive } from "../runtime";
import type { ComponentPropsWithoutRef } from "react";

/** Allowed \`variant\` values (manifest variant group "orientation", attr \`data-variant\`). */
export type LSeparatorVariant = "horizontal" | "vertical";

/** Allowed \`styleVariant\` values (manifest variant group "style", attr \`data-style\`). */
export type LSeparatorStyleVariant = "solid" | "dashed" | "dotted" | "thick";

export interface LSeparatorProps extends Omit<ComponentPropsWithoutRef<"hr">, "variant" | "styleVariant"> {
  /** \`data-variant\`; omitted when unset (manifest default: "horizontal"). */
  variant?: LSeparatorVariant;
  /** \`data-style\`; omitted when unset (manifest default: "solid"). */
  styleVariant?: LSeparatorStyleVariant;
}

/** \`separator\` — Horizontal or vertical divider line */
export const LSeparator = createFaqirPrimitive<LSeparatorProps>({
  name: "separator",
  tag: "hr",
  variants: [
    { prop: "variant", attr: "data-variant", values: ["horizontal", "vertical"] },
    { prop: "styleVariant", attr: "data-style", values: ["solid", "dashed", "dotted", "thick"] },
  ],
  states: [],
  slots: [],
  defaultSlot: false,
}, "LSeparator");

export default LSeparator;
"
`;

exports[`bindings react codegen snapshot per primitive: react:signature 1`] = `
"// AUTO-GENERATED by \`faqir bindings react\` from registry/primitives/signature/signature.manifest.json.
// Do not edit — regenerate with \`faqir bindings react\`.

import { createFaqirPrimitive } from "../runtime";
import type { ComponentPropsWithoutRef, ReactNode } from "react";

/** Allowed \`size\` values (manifest variant group "size", attr \`data-size\`). */
export type LSignatureSize = "sm" | "md" | "lg";

/** Allowed \`align\` values (manifest variant group "align", attr \`data-align\`). */
export type LSignatureAlign = "left" | "center" | "right";

export interface LSignatureProps extends Omit<ComponentPropsWithoutRef<"div">, "size" | "align" | "line" | "label"> {
  /** \`data-size\`; omitted when unset (manifest default: "md"). */
  size?: LSignatureSize;
  /** \`data-align\`; omitted when unset (manifest default: "left"). */
  align?: LSignatureAlign;
  /** Projected into \`<div data-part="line">\` (required part — always rendered). */
  line?: ReactNode;
  /** Projected into \`<span data-part="label">\` (required part — always rendered). */
  label?: ReactNode;
}

/** \`signature\` — Signature line with label for printed document signing */
export const LSignature = createFaqirPrimitive<LSignatureProps>({
  name: "signature",
  tag: "div",
  variants: [
    { prop: "size", attr: "data-size", values: ["sm", "md", "lg"] },
    { prop: "align", attr: "data-align", values: ["left", "center", "right"] },
  ],
  states: [],
  slots: [
    { name: "line", tag: "div", required: true, isVoid: false },
    { name: "label", tag: "span", required: true, isVoid: false },
  ],
  defaultSlot: false,
}, "LSignature");

export default LSignature;
"
`;

exports[`bindings react codegen snapshot per primitive: react:skeleton 1`] = `
"// AUTO-GENERATED by \`faqir bindings react\` from registry/primitives/skeleton/skeleton.manifest.json.
// Do not edit — regenerate with \`faqir bindings react\`.

import { createFaqirPrimitive } from "../runtime";
import type { ComponentPropsWithoutRef } from "react";

/** Allowed \`variant\` values (manifest variant group "shape", attr \`data-variant\`). */
export type LSkeletonVariant = "text" | "circle" | "rect";

export interface LSkeletonProps extends Omit<ComponentPropsWithoutRef<"div">, "variant"> {
  /** \`data-variant\`; omitted when unset (manifest default: "text"). */
  variant?: LSkeletonVariant;
}

/** \`skeleton\` — Loading placeholder with text/circle/rect variants and a shimmer animation that respects prefers-reduced-motion */
export const LSkeleton = createFaqirPrimitive<LSkeletonProps>({
  name: "skeleton",
  tag: "div",
  variants: [
    { prop: "variant", attr: "data-variant", values: ["text", "circle", "rect"] },
  ],
  states: [],
  slots: [],
  defaultSlot: true,
}, "LSkeleton");

export default LSkeleton;
"
`;

exports[`bindings react codegen snapshot per primitive: react:spinner 1`] = `
"// AUTO-GENERATED by \`faqir bindings react\` from registry/primitives/spinner/spinner.manifest.json.
// Do not edit — regenerate with \`faqir bindings react\`.

import { createFaqirPrimitive } from "../runtime";
import type { ComponentPropsWithoutRef } from "react";

/** Allowed \`size\` values (manifest variant group "size", attr \`data-size\`). */
export type LSpinnerSize = "sm" | "md" | "lg" | "xl";

export interface LSpinnerProps extends Omit<ComponentPropsWithoutRef<"div">, "size"> {
  /** \`data-size\`; omitted when unset (manifest default: "md"). */
  size?: LSpinnerSize;
}

/** \`spinner\` — Circular loading spinner with multiple sizes */
export const LSpinner = createFaqirPrimitive<LSpinnerProps>({
  name: "spinner",
  tag: "div",
  variants: [
    { prop: "size", attr: "data-size", values: ["sm", "md", "lg", "xl"] },
  ],
  states: [],
  slots: [],
  defaultSlot: false,
}, "LSpinner");

export default LSpinner;
"
`;

exports[`bindings react codegen snapshot per primitive: react:stack 1`] = `
"// AUTO-GENERATED by \`faqir bindings react\` from registry/primitives/stack/stack.manifest.json.
// Do not edit — regenerate with \`faqir bindings react\`.

import { createFaqirPrimitive } from "../runtime";
import type { ComponentPropsWithoutRef } from "react";

/** Allowed \`variant\` values (manifest variant group "direction", attr \`data-variant\`). */
export type LStackVariant = "vertical" | "horizontal";

/** Allowed \`gap\` values (manifest variant group "gap", attr \`data-gap\`). */
export type LStackGap = "0" | "1" | "2" | "3" | "4" | "6" | "8";

/** Allowed \`align\` values (manifest variant group "align", attr \`data-align\`). */
export type LStackAlign = "start" | "center" | "end" | "stretch";

export interface LStackProps extends Omit<ComponentPropsWithoutRef<"div">, "variant" | "gap" | "align"> {
  /** \`data-variant\`; omitted when unset (manifest default: "vertical"). */
  variant?: LStackVariant;
  /** \`data-gap\`; omitted when unset (manifest default: "0"). */
  gap?: LStackGap;
  /** \`data-align\`; omitted when unset (manifest default: "stretch"). */
  align?: LStackAlign;
}

/** \`stack\` — Flexbox layout container for vertical or horizontal stacking with configurable gap and alignment */
export const LStack = createFaqirPrimitive<LStackProps>({
  name: "stack",
  tag: "div",
  variants: [
    { prop: "variant", attr: "data-variant", values: ["vertical", "horizontal"] },
    { prop: "gap", attr: "data-gap", values: ["0", "1", "2", "3", "4", "6", "8"] },
    { prop: "align", attr: "data-align", values: ["start", "center", "end", "stretch"] },
  ],
  states: [],
  slots: [],
  defaultSlot: true,
}, "LStack");

export default LStack;
"
`;

exports[`bindings react codegen snapshot per primitive: react:stat 1`] = `
"// AUTO-GENERATED by \`faqir bindings react\` from registry/primitives/stat/stat.manifest.json.
// Do not edit — regenerate with \`faqir bindings react\`.

import { createFaqirPrimitive } from "../runtime";
import type { ComponentPropsWithoutRef, ReactNode } from "react";

/** Allowed \`size\` values (manifest variant group "size", attr \`data-size\`). */
export type LStatSize = "sm" | "md" | "lg";

/** Allowed \`variant\` values (manifest variant group "variant", attr \`data-variant\`). */
export type LStatVariant = "default" | "card";

/** Allowed \`trend\` values (manifest variant group "trend", attr \`data-trend\`). */
export type LStatTrend = "up" | "down" | "neutral";

export interface LStatProps extends Omit<ComponentPropsWithoutRef<"div">, "size" | "variant" | "trend" | "value" | "label" | "change" | "icon"> {
  /** \`data-size\`; omitted when unset (manifest default: "md"). */
  size?: LStatSize;
  /** \`data-variant\`; omitted when unset (manifest default: "default"). */
  variant?: LStatVariant;
  /** \`data-trend\`; omitted when unset (manifest default: ""). */
  trend?: LStatTrend;
  /** Projected into \`<span data-part="value">\` (required part — always rendered). */
  value?: ReactNode;
  /** Projected into \`<span data-part="label">\` (required part — always rendered). */
  label?: ReactNode;
  /** Projected into \`<span data-part="change">\`. */
  change?: ReactNode;
  /** Projected into \`<span data-part="icon">\`. */
  icon?: ReactNode;
}

/** \`stat\` — Large metric display with number, label, and optional change indicator */
export const LStat = createFaqirPrimitive<LStatProps>({
  name: "stat",
  tag: "div",
  variants: [
    { prop: "size", attr: "data-size", values: ["sm", "md", "lg"] },
    { prop: "variant", attr: "data-variant", values: ["default", "card"] },
    { prop: "trend", attr: "data-trend", values: ["up", "down", "neutral"] },
  ],
  states: [],
  slots: [
    { name: "value", tag: "span", required: true, isVoid: false },
    { name: "label", tag: "span", required: true, isVoid: false },
    { name: "change", tag: "span", required: false, isVoid: false },
    { name: "icon", tag: "span", required: false, isVoid: false },
  ],
  defaultSlot: false,
}, "LStat");

export default LStat;
"
`;

exports[`bindings react codegen snapshot per primitive: react:stepper 1`] = `
"// AUTO-GENERATED by \`faqir bindings react\` from registry/primitives/stepper/stepper.manifest.json.
// Do not edit — regenerate with \`faqir bindings react\`.

import { createFaqirPrimitive } from "../runtime";
import type { ComponentPropsWithoutRef, ReactNode } from "react";

/** Allowed \`variant\` values (manifest variant group "variant", attr \`data-variant\`). */
export type LStepperVariant = "horizontal" | "vertical";

/** Allowed \`size\` values (manifest variant group "size", attr \`data-size\`). */
export type LStepperSize = "sm" | "md" | "lg";

export interface LStepperProps extends Omit<ComponentPropsWithoutRef<"div">, "variant" | "size" | "step" | "indicator" | "label" | "connector"> {
  /** \`data-variant\`; omitted when unset (manifest default: "horizontal"). */
  variant?: LStepperVariant;
  /** \`data-size\`; omitted when unset (manifest default: "md"). */
  size?: LStepperSize;
  /** Projected into \`<div data-part="step">\` (required part — always rendered). */
  step?: ReactNode;
  /** Projected into \`<span data-part="indicator">\` (required part — always rendered). */
  indicator?: ReactNode;
  /** Projected into \`<span data-part="label">\`. */
  label?: ReactNode;
  /** Projected into \`<div data-part="connector">\`. */
  connector?: ReactNode;
}

/** \`stepper\` — Step indicator with numbered circles, connectors, and labels for multi-step flows */
export const LStepper = createFaqirPrimitive<LStepperProps>({
  name: "stepper",
  tag: "div",
  variants: [
    { prop: "variant", attr: "data-variant", values: ["horizontal", "vertical"] },
    { prop: "size", attr: "data-size", values: ["sm", "md", "lg"] },
  ],
  states: [],
  slots: [
    { name: "step", tag: "div", required: true, isVoid: false },
    { name: "indicator", tag: "span", required: true, isVoid: false },
    { name: "label", tag: "span", required: false, isVoid: false },
    { name: "connector", tag: "div", required: false, isVoid: false },
  ],
  defaultSlot: false,
}, "LStepper");

export default LStepper;
"
`;

exports[`bindings react codegen snapshot per primitive: react:surface 1`] = `
"// AUTO-GENERATED by \`faqir bindings react\` from registry/primitives/surface/surface.manifest.json.
// Do not edit — regenerate with \`faqir bindings react\`.

import { createFaqirPrimitive } from "../runtime";
import type { ComponentPropsWithoutRef } from "react";

/** Allowed \`variant\` values (manifest variant group "elevation", attr \`data-variant\`). */
export type LSurfaceVariant = "flat" | "raised" | "overlay";

/** Allowed \`size\` values (manifest variant group "padding", attr \`data-size\`). */
export type LSurfaceSize = "0" | "sm" | "md" | "lg";

export interface LSurfaceProps extends Omit<ComponentPropsWithoutRef<"div">, "variant" | "size"> {
  /** \`data-variant\`; omitted when unset (manifest default: "default"). */
  variant?: LSurfaceVariant;
  /** \`data-size\`; omitted when unset (manifest default: "0"). */
  size?: LSurfaceSize;
}

/** \`surface\` — Generic container with visual elevation and configurable padding */
export const LSurface = createFaqirPrimitive<LSurfaceProps>({
  name: "surface",
  tag: "div",
  variants: [
    { prop: "variant", attr: "data-variant", values: ["flat", "raised", "overlay"] },
    { prop: "size", attr: "data-size", values: ["0", "sm", "md", "lg"] },
  ],
  states: [],
  slots: [],
  defaultSlot: true,
}, "LSurface");

export default LSurface;
"
`;

exports[`bindings react codegen snapshot per primitive: react:switch 1`] = `
"// AUTO-GENERATED by \`faqir bindings react\` from registry/primitives/switch/switch.manifest.json.
// Do not edit — regenerate with \`faqir bindings react\`.

import { createFaqirPrimitive } from "../runtime";
import type { ComponentPropsWithoutRef, ReactNode } from "react";

/** Allowed \`size\` values (manifest variant group "size", attr \`data-size\`). */
export type LSwitchSize = "sm" | "md" | "lg";

export interface LSwitchProps extends Omit<ComponentPropsWithoutRef<"button">, "size" | "on" | "disabled" | "label"> {
  /** \`data-size\`; omitted when unset (manifest default: "md"). */
  size?: LSwitchSize;
  /** Sets \`data-state="on"\`. */
  on?: boolean;
  /** Sets the \`disabled\` attribute. */
  disabled?: boolean;
  /** Projected into \`<span data-part="label">\`. */
  label?: ReactNode;
}

/** \`switch\` — Toggle switch with on/off states, disabled state, and size variants */
export const LSwitch = createFaqirPrimitive<LSwitchProps>({
  name: "switch",
  tag: "button",
  variants: [
    { prop: "size", attr: "data-size", values: ["sm", "md", "lg"] },
  ],
  states: [
    { prop: "on", attr: "data-state", value: "on", kind: "value" },
    { prop: "disabled", attr: "disabled", value: null, kind: "presence" },
  ],
  slots: [
    { name: "label", tag: "span", required: false, isVoid: false },
  ],
  defaultSlot: true,
}, "LSwitch");

export default LSwitch;
"
`;

exports[`bindings react codegen snapshot per primitive: react:text 1`] = `
"// AUTO-GENERATED by \`faqir bindings react\` from registry/primitives/text/text.manifest.json.
// Do not edit — regenerate with \`faqir bindings react\`.

import { createFaqirPrimitive } from "../runtime";
import type { ComponentPropsWithoutRef } from "react";

/** Allowed \`variant\` values (manifest variant group "variant", attr \`data-variant\`). */
export type LTextVariant = "default" | "muted" | "subtle" | "primary" | "mono";

/** Allowed \`size\` values (manifest variant group "size", attr \`data-size\`). */
export type LTextSize = "xs" | "sm" | "base" | "lg" | "xl" | "1" | "2" | "3" | "4" | "5" | "6";

/** Allowed \`weight\` values (manifest variant group "weight", attr \`data-weight\`). */
export type LTextWeight = "normal" | "medium" | "semibold" | "bold";

/** Allowed \`align\` values (manifest variant group "align", attr \`data-align\`). */
export type LTextAlign = "left" | "center" | "right";

/** Allowed \`leading\` values (manifest variant group "leading", attr \`data-leading\`). */
export type LTextLeading = "tight" | "snug" | "normal" | "relaxed";

export interface LTextProps extends Omit<ComponentPropsWithoutRef<"p">, "variant" | "size" | "weight" | "align" | "leading"> {
  /** \`data-variant\`; omitted when unset (manifest default: "default"). */
  variant?: LTextVariant;
  /** \`data-size\`; omitted when unset (manifest default: "base"). */
  size?: LTextSize;
  /** \`data-weight\`; omitted when unset (manifest default: "normal"). */
  weight?: LTextWeight;
  /** \`data-align\`; omitted when unset (manifest default: "left"). */
  align?: LTextAlign;
  /** \`data-leading\`; omitted when unset (manifest default: "normal"). */
  leading?: LTextLeading;
}

/** \`text\` — Text and heading primitives with size, color, weight, alignment, and truncation via data attributes */
export const LText = createFaqirPrimitive<LTextProps>({
  name: "text",
  tag: "p",
  variants: [
    { prop: "variant", attr: "data-variant", values: ["default", "muted", "subtle", "primary", "mono"] },
    { prop: "size", attr: "data-size", values: ["xs", "sm", "base", "lg", "xl", "1", "2", "3", "4", "5", "6"] },
    { prop: "weight", attr: "data-weight", values: ["normal", "medium", "semibold", "bold"] },
    { prop: "align", attr: "data-align", values: ["left", "center", "right"] },
    { prop: "leading", attr: "data-leading", values: ["tight", "snug", "normal", "relaxed"] },
  ],
  states: [],
  slots: [],
  defaultSlot: true,
}, "LText");

export default LText;
"
`;

exports[`bindings react codegen snapshot per primitive: react:textarea 1`] = `
"// AUTO-GENERATED by \`faqir bindings react\` from registry/primitives/textarea/textarea.manifest.json.
// Do not edit — regenerate with \`faqir bindings react\`.

import { createFaqirPrimitive } from "../runtime";
import type { ComponentPropsWithoutRef } from "react";

/** Allowed \`size\` values (manifest variant group "size", attr \`data-size\`). */
export type LTextareaSize = "sm" | "md" | "lg";

export interface LTextareaProps extends Omit<ComponentPropsWithoutRef<"textarea">, "size" | "error" | "disabled"> {
  /** \`data-size\`; omitted when unset (manifest default: "md"). */
  size?: LTextareaSize;
  /** Sets \`data-state="error"\`. */
  error?: boolean;
  /** Sets the \`disabled\` attribute. */
  disabled?: boolean;
}

/** \`textarea\` — Multi-line text input with error, disabled states and size variants */
export const LTextarea = createFaqirPrimitive<LTextareaProps>({
  name: "textarea",
  tag: "textarea",
  variants: [
    { prop: "size", attr: "data-size", values: ["sm", "md", "lg"] },
  ],
  states: [
    { prop: "error", attr: "data-state", value: "error", kind: "value" },
    { prop: "disabled", attr: "disabled", value: null, kind: "presence" },
  ],
  slots: [],
  defaultSlot: true,
}, "LTextarea");

export default LTextarea;
"
`;

exports[`bindings react codegen snapshot per primitive: react:toggle 1`] = `
"// AUTO-GENERATED by \`faqir bindings react\` from registry/primitives/toggle/toggle.manifest.json.
// Do not edit — regenerate with \`faqir bindings react\`.

import { createFaqirPrimitive } from "../runtime";
import type { ComponentPropsWithoutRef } from "react";

/** Allowed \`size\` values (manifest variant group "size", attr \`data-size\`). */
export type LToggleSize = "sm" | "md" | "lg";

export interface LToggleProps extends Omit<ComponentPropsWithoutRef<"button">, "size" | "pressed"> {
  /** \`data-size\`; omitted when unset (manifest default: "md"). */
  size?: LToggleSize;
  /** Reflected as \`aria-pressed="true"|"false"\`. */
  pressed?: boolean;
}

/** \`toggle\` — Two-state toggle button whose pressed appearance is driven entirely by aria-pressed — CSS-only, no JavaScript */
export const LToggle = createFaqirPrimitive<LToggleProps>({
  name: "toggle",
  tag: "button",
  variants: [
    { prop: "size", attr: "data-size", values: ["sm", "md", "lg"] },
  ],
  states: [
    { prop: "pressed", attr: "aria-pressed", value: null, kind: "aria" },
  ],
  slots: [],
  defaultSlot: true,
}, "LToggle");

export default LToggle;
"
`;

exports[`bindings react codegen snapshot per primitive: react:watermark 1`] = `
"// AUTO-GENERATED by \`faqir bindings react\` from registry/primitives/watermark/watermark.manifest.json.
// Do not edit — regenerate with \`faqir bindings react\`.

import { createFaqirPrimitive } from "../runtime";
import type { ComponentPropsWithoutRef, ReactNode } from "react";

/** Allowed \`variant\` values (manifest variant group "position", attr \`data-variant\`). */
export type LWatermarkVariant = "fixed" | "absolute";

/** Allowed \`pattern\` values (manifest variant group "pattern", attr \`data-pattern\`). */
export type LWatermarkPattern = "single" | "repeated";

/** Allowed \`size\` values (manifest variant group "size", attr \`data-size\`). */
export type LWatermarkSize = "sm" | "md" | "lg";

/** Allowed \`orientation\` values (manifest variant group "orientation", attr \`data-orientation\`). */
export type LWatermarkOrientation = "diagonal" | "horizontal";

export interface LWatermarkProps extends Omit<ComponentPropsWithoutRef<"div">, "variant" | "pattern" | "size" | "orientation" | "mark"> {
  /** \`data-variant\`; omitted when unset (manifest default: "fixed"). */
  variant?: LWatermarkVariant;
  /** \`data-pattern\`; omitted when unset (manifest default: "single"). */
  pattern?: LWatermarkPattern;
  /** \`data-size\`; omitted when unset (manifest default: "md"). */
  size?: LWatermarkSize;
  /** \`data-orientation\`; omitted when unset (manifest default: "diagonal"). */
  orientation?: LWatermarkOrientation;
  /** Projected into \`<span data-part="mark">\` (required part — always rendered). */
  mark?: ReactNode;
}

/** \`watermark\` — Non-interactive diagonal text overlay with single or repeated print-safe layouts */
export const LWatermark = createFaqirPrimitive<LWatermarkProps>({
  name: "watermark",
  tag: "div",
  variants: [
    { prop: "variant", attr: "data-variant", values: ["fixed", "absolute"] },
    { prop: "pattern", attr: "data-pattern", values: ["single", "repeated"] },
    { prop: "size", attr: "data-size", values: ["sm", "md", "lg"] },
    { prop: "orientation", attr: "data-orientation", values: ["diagonal", "horizontal"] },
  ],
  states: [],
  slots: [
    { name: "mark", tag: "span", required: true, isVoid: false },
  ],
  defaultSlot: false,
}, "LWatermark");

export default LWatermark;
"
`;

exports[`bindings react codegen snapshot per primitive: react:index 1`] = `
"// AUTO-GENERATED by \`faqir bindings react\`. Do not edit — regenerate instead.

export { createFaqirPrimitive } from "./runtime";
export type { FaqirPrimitiveSpec, SpecVariant, SpecState, SpecSlot } from "./runtime";
export { createFaqirRecipe, useFaqirController, __activeControllers } from "./recipe-runtime";
export type {
  FaqirRecipeSpec,
  RecipeNode,
  RecipeSeg,
  RecipeAttrVal,
  RecipeController,
  RecipeHandle,
  FaqirEventHandler,
  UseFaqirControllerOptions,
} from "./recipe-runtime";

export { LAspectRatio } from "./components/aspect-ratio";
export type { LAspectRatioProps, LAspectRatioVariant } from "./components/aspect-ratio";
export { LAvatar } from "./components/avatar";
export type { LAvatarProps, LAvatarSize } from "./components/avatar";
export { LBadge } from "./components/badge";
export type { LBadgeProps, LBadgeVariant, LBadgeSize } from "./components/badge";
export { LBreadcrumb } from "./components/breadcrumb";
export type { LBreadcrumbProps, LBreadcrumbSize } from "./components/breadcrumb";
export { LButton } from "./components/button";
export type { LButtonProps, LButtonVariant, LButtonSize } from "./components/button";
export { LCallout } from "./components/callout";
export type { LCalloutProps, LCalloutVariant } from "./components/callout";
export { LCard } from "./components/card";
export type { LCardProps, LCardVariant, LCardSize } from "./components/card";
export { LCheckbox } from "./components/checkbox";
export type { LCheckboxProps, LCheckboxSize } from "./components/checkbox";
export { LChip } from "./components/chip";
export type { LChipProps, LChipVariant, LChipSize } from "./components/chip";
export { LCollapsible } from "./components/collapsible";
export type { LCollapsibleProps, LCollapsibleVariant } from "./components/collapsible";
export { LDescriptionList } from "./components/description-list";
export type { LDescriptionListProps, LDescriptionListVariant, LDescriptionListSize } from "./components/description-list";
export { LEmptyState } from "./components/empty-state";
export type { LEmptyStateProps } from "./components/empty-state";
export { LFieldGroup } from "./components/field-group";
export type { LFieldGroupProps, LFieldGroupVariant, LFieldGroupSize } from "./components/field-group";
export { LGrid } from "./components/grid";
export type { LGridProps, LGridCols, LGridGap } from "./components/grid";
export { LIcon } from "./components/icon";
export type { LIconProps, LIconIcon } from "./components/icon";
export { LImage } from "./components/image";
export type { LImageProps, LImageVariant, LImageSize } from "./components/image";
export { LInput } from "./components/input";
export type { LInputProps, LInputSize } from "./components/input";
export { LKbd } from "./components/kbd";
export type { LKbdProps } from "./components/kbd";
export { LKeyValue } from "./components/key-value";
export type { LKeyValueProps, LKeyValueVariant, LKeyValueSize } from "./components/key-value";
export { LLabel } from "./components/label";
export type { LLabelProps, LLabelVariant, LLabelSize } from "./components/label";
export { LLink } from "./components/link";
export type { LLinkProps, LLinkVariant } from "./components/link";
export { LNav } from "./components/nav";
export type { LNavProps, LNavVariant } from "./components/nav";
export { LPageBreak } from "./components/page-break";
export type { LPageBreakProps, LPageBreakVariant } from "./components/page-break";
export { LProgress } from "./components/progress";
export type { LProgressProps, LProgressVariant, LProgressSize } from "./components/progress";
export { LRadio } from "./components/radio";
export type { LRadioProps, LRadioSize } from "./components/radio";
export { LSelect } from "./components/select";
export type { LSelectProps, LSelectSize } from "./components/select";
export { LSeparator } from "./components/separator";
export type { LSeparatorProps, LSeparatorVariant, LSeparatorStyleVariant } from "./components/separator";
export { LSignature } from "./components/signature";
export type { LSignatureProps, LSignatureSize, LSignatureAlign } from "./components/signature";
export { LSkeleton } from "./components/skeleton";
export type { LSkeletonProps, LSkeletonVariant } from "./components/skeleton";
export { LSpinner } from "./components/spinner";
export type { LSpinnerProps, LSpinnerSize } from "./components/spinner";
export { LStack } from "./components/stack";
export type { LStackProps, LStackVariant, LStackGap, LStackAlign } from "./components/stack";
export { LStat } from "./components/stat";
export type { LStatProps, LStatSize, LStatVariant, LStatTrend } from "./components/stat";
export { LStepper } from "./components/stepper";
export type { LStepperProps, LStepperVariant, LStepperSize } from "./components/stepper";
export { LSurface } from "./components/surface";
export type { LSurfaceProps, LSurfaceVariant, LSurfaceSize } from "./components/surface";
export { LSwitch } from "./components/switch";
export type { LSwitchProps, LSwitchSize } from "./components/switch";
export { LText } from "./components/text";
export type { LTextProps, LTextVariant, LTextSize, LTextWeight, LTextAlign, LTextLeading } from "./components/text";
export { LTextarea } from "./components/textarea";
export type { LTextareaProps, LTextareaSize } from "./components/textarea";
export { LToggle } from "./components/toggle";
export type { LToggleProps, LToggleSize } from "./components/toggle";
export { LWatermark } from "./components/watermark";
export type { LWatermarkProps, LWatermarkVariant, LWatermarkPattern, LWatermarkSize, LWatermarkOrientation } from "./components/watermark";

export { LAccordion } from "./recipes/accordion";
export type { LAccordionProps, LAccordionBordered, LAccordionType } from "./recipes/accordion";
export { LAlertDialog } from "./recipes/alert-dialog";
export type { LAlertDialogProps, LAlertDialogSize, LAlertDialogTone } from "./recipes/alert-dialog";
export { LBarcode } from "./recipes/barcode";
export type { LBarcodeProps, LBarcodeSize } from "./recipes/barcode";
export { LCalendar } from "./recipes/calendar";
export type { LCalendarProps, LCalendarSize } from "./recipes/calendar";
export { LCombobox } from "./recipes/combobox";
export type { LComboboxProps, LComboboxSize } from "./recipes/combobox";
export { LCommandPalette } from "./recipes/command-palette";
export type { LCommandPaletteProps, LCommandPaletteSize } from "./recipes/command-palette";
export { LContextMenu } from "./recipes/context-menu";
export type { LContextMenuProps } from "./recipes/context-menu";
export { LDatePicker } from "./recipes/date-picker";
export type { LDatePickerProps, LDatePickerSize } from "./recipes/date-picker";
export { LDialog } from "./recipes/dialog";
export type { LDialogProps, LDialogSize, LDialogTone } from "./recipes/dialog";
export { LDrawer } from "./recipes/drawer";
export type { LDrawerProps, LDrawerSide, LDrawerSize } from "./recipes/drawer";
export { LDropdown } from "./recipes/dropdown";
export type { LDropdownProps, LDropdownAlign, LDropdownSize } from "./recipes/dropdown";
export { LInputOtp } from "./recipes/input-otp";
export type { LInputOtpProps, LInputOtpMode, LInputOtpSize } from "./recipes/input-otp";
export { LMenubar } from "./recipes/menubar";
export type { LMenubarProps, LMenubarSize } from "./recipes/menubar";
export { LPagination } from "./recipes/pagination";
export type { LPaginationProps, LPaginationSize } from "./recipes/pagination";
export { LPopover } from "./recipes/popover";
export type { LPopoverProps, LPopoverAlign, LPopoverPosition } from "./recipes/popover";
export { LQrCode } from "./recipes/qr-code";
export type { LQrCodeProps, LQrCodeEcl, LQrCodeSize } from "./recipes/qr-code";
export { LSelectCustom } from "./recipes/select-custom";
export type { LSelectCustomProps, LSelectCustomSize } from "./recipes/select-custom";
export { LSheet } from "./recipes/sheet";
export type { LSheetProps, LSheetSide, LSheetSize } from "./recipes/sheet";
export { LSidebar } from "./recipes/sidebar";
export type { LSidebarProps } from "./recipes/sidebar";
export { LSlider } from "./recipes/slider";
export type { LSliderProps, LSliderSize, LSliderType } from "./recipes/slider";
export { LTable } from "./recipes/table";
export type { LTableProps, LTableBordered, LTableSize, LTableStriped } from "./recipes/table";
export { LTabs } from "./recipes/tabs";
export type { LTabsProps, LTabsSize, LTabsStyleVariant } from "./recipes/tabs";
export { LToast } from "./recipes/toast";
export type { LToastProps, LToastPosition } from "./recipes/toast";
export { LTooltip } from "./recipes/tooltip";
export type { LTooltipProps, LTooltipPosition } from "./recipes/tooltip";
export { LTreeView } from "./recipes/tree-view";
export type { LTreeViewProps } from "./recipes/tree-view";

export { createAccordion } from "./controllers/accordion";
export { createAlertDialog } from "./controllers/alert-dialog";
export { createBarcode } from "./controllers/barcode";
export { createCalendar } from "./controllers/calendar";
export { createCombobox } from "./controllers/combobox";
export { createCommandPalette } from "./controllers/command-palette";
export { createContextMenu } from "./controllers/context-menu";
export { createDatePicker } from "./controllers/date-picker";
export { createDialog } from "./controllers/dialog";
export { createDrawer } from "./controllers/drawer";
export { createDropdown } from "./controllers/dropdown";
export { createInputOTP } from "./controllers/input-otp";
export { createMenubar } from "./controllers/menubar";
export { createPagination } from "./controllers/pagination";
export { createPopover } from "./controllers/popover";
export { createQRCode } from "./controllers/qr-code";
export { createSelectCustom } from "./controllers/select-custom";
export { createSheet } from "./controllers/sheet";
export { createSidebar } from "./controllers/sidebar";
export { createSlider } from "./controllers/slider";
export { createTable } from "./controllers/table";
export { createTabs } from "./controllers/tabs";
export { createToastContainer } from "./controllers/toast";
export { createTooltip } from "./controllers/tooltip";
export { createTreeView } from "./controllers/tree-view";
"
`;
